# rkb-rust

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  LESSONS.md  LICENSE  README.md  ROADMAP.md  SPEC.md  release.toml
.agents/skills/rkb-parity-analyst/: SKILL.md
.agents/skills/rkb-qa-reviewer/: SKILL.md
.agents/skills/rkb-rewrite-orchestrator/: SKILL.md
.agents/skills/rkb-rust-porter/: SKILL.md
.github/workflows/: ci.yml  release.yml
_workspace/: README.md
data/graph/: data_source_variable_edges.csv  document_edges.csv  ontology_edges.csv  ontology_nodes.csv  variable_edges.csv
data/metadata/: canonical_variables.csv  datasets.csv  documents.csv  variables.csv
data/parsed/chunks/: ahc-model__chunk_0.json  ahc-model__chunk_1.json  ahc-model__chunk_10.json  ahc-model__chunk_11.json  ahc-model__chunk_2.json  ahc-model__chunk_3.json  ahc-model__chunk_4.json  ahc-model__chunk_5.json  ahc-model__chunk_6.json  ahc-model__chunk_7.json  ahc-model__chunk_8.json  ahc-model__chunk_9.json  ahc-model__codebook-ahc_pdf__2ecadb1aec__p100__chunk_0.json  ahc-model__codebook-ahc_pdf__2ecadb1aec__p100__chunk_1.json  ahc-model__codebook-ahc_pdf__2ecadb1aec__p101__chunk_0.json  ahc-model__codebook-ahc_pdf__2ecadb1aec__p101__chunk_1.json  ahc-model__codebook-ahc_pdf__2ecadb1aec__p102__chunk_0.json  ahc-model__codebook-ahc_pdf__2ecadb1aec__p102__chunk_1.json  ahc-model__codebook-ahc_pdf__2ecadb1aec__p103__chunk_0.json  ahc-model__codebook-ahc_pdf__2ecadb1aec__p103__chunk_1.json  ahc-model__codebook-ahc_pdf__2ecadb1aec__p104__chunk_0.json  ahc-model__codebook-ahc_pdf__2ecadb1aec__p104__chunk_1.json  ahc-model__codebook-ahc_pdf__2ecadb1aec__p105__chunk_0.json  ahc-model__codebook-ahc_pdf__2ecadb1aec__p105__chunk_1.json  ahc-model__codebook-ahc_pdf__2ecadb1aec__p106__chunk_0.json  ahc-model__codebook-ahc_pdf__2ecadb1aec__p106__chunk_1.json  ahc-model__codebook-ahc_pdf__2ecadb1aec__p107__chunk_0.json  ahc-model__codebook-ahc_pdf__2ecadb1aec__p107__chunk_1.json  ahc-model__codebook-ahc_pdf__2ecadb1aec__p108__chunk_0.json  ahc-model__codebook-ahc_pdf__2ecadb1aec__p108__chunk_1.json  ahc-model__codebook-ahc_pdf__2ecadb1aec__p109__chunk_0.json  ahc-model__codebook-ahc_pdf__2ecadb1aec__p109__chunk_1.json  ahc-model__codebook-ahc_pdf__2ecadb1aec__p10__chunk_0.json  ahc-model__codebook-ahc_pdf__2ecadb1aec__p10__chunk_1.json  ahc-model__codebook-ahc_pdf__2ecadb1aec__p110__chunk_0.json  ahc-model__codebook-ahc_pdf__2ecadb1aec__p110__chunk_1.json  ahc-model__codebook-ahc_pdf__2ecadb1aec__p111__chunk_0.json  ahc-model__codebook-ahc_pdf__2ecadb1aec__p111__chunk_1.json  (+28521 more)
docs/: PROJECT_DESCRIPTION.md  RELEASE.md  USER_MANUAL.md  python-baseline.md  release-evidence.md  rust-rewrite-design.md
manifests/: archive_manifest.csv  site_inventory.csv  site_inventory_edges.csv
scripts/: release-check  release-package  release-plan  release.py
src/: agent_context.rs  archive.rs  cli.rs  config.rs  error.rs  evaluation.rs  extract.rs  integration.rs  inventory.rs  lib.rs  main.rs  mcp.rs  mcp_setup.rs  parse.rs  paths.rs  progress.rs  qa.rs  records.rs  retrieval.rs  variables.rs
tests/: agent_context.rs  archive_summary.rs  cli_contract.rs  domain_foundation.rs  evaluation.rs  harness_contract.rs  hybrid_retrieval.rs  integration.rs  mcp.rs  mcp_setup.rs  parsing.rs  preservation.rs  progress.rs  qa.rs  retrieval.rs  transformation.rs  variables.rs
(+282 files in other folders)
