[package]
name = "rkb-rust"
version = "0.1.0"
edition = "2024"
rust-version = "1.96"
description = "Rust rewrite of the ResDAC/CMS documentation knowledge base"
license = "MIT"
repository = "https://github.com/SaehwanPark/rkb-rust"

[lib]
name = "rkb"
path = "src/lib.rs"

[[bin]]
name = "rkb"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3"
ureq = "2.9"
scraper = "0.18"
sha2 = "0.10"
sha-1 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
url = "2.5"
zip = "8.6.0"
quick-xml = "0.40.1"
pdf-extract = "0.10.0"
ego-tree = "0.6.3"
regex = "1.11"
rusqlite = { version = "0.37", features = ["bundled"] }

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = "deny"
pedantic = "deny"
