[package]
name = "rkb-rust"
version = "0.1.0"
edition = "2024"
rust-version = "1.96"
description = "Rust rewrite of the ResDAC/CMS documentation knowledge base"
license = "MIT"
repository = "https://github.com/SaehwanPark/rkb-rust"
homepage = "https://github.com/SaehwanPark/rkb-rust"
documentation = "https://github.com/SaehwanPark/rkb-rust/blob/main/docs/USER_MANUAL.md"
readme = "docs/PROJECT_DESCRIPTION.md"
keywords = ["cms", "resdac", "retrieval", "archive", "cli"]
categories = ["command-line-utilities", "science"]
include = [
  "/src/**/*.rs",
  "/tests/**/*.rs",
  "/tests/fixtures/python-baseline/**",
  "/docs/PROJECT_DESCRIPTION.md",
  "/docs/USER_MANUAL.md",
  "/docs/RELEASE.md",
  "/docs/release-evidence.md",
  "/README.md",
  "/LICENSE",
  "/Cargo.toml",
  "/Cargo.lock",
  "/rust-toolchain.toml",
  "/rustfmt.toml",
]

[lib]
name = "rkb"
path = "src/lib.rs"

[[bin]]
name = "rkb"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3"
ureq = "2.9"
scraper = "0.18"
sha2 = "0.10"
sha-1 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
url = "2.5"
zip = "8.6.0"
quick-xml = "0.40.1"
pdf-extract = "0.10.0"
ego-tree = "0.6.3"
regex = "1.11"
rusqlite = { version = "0.37", features = ["bundled"] }

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = "deny"
pedantic = "deny"

[workspace]
members = ["."]
resolver = "3"

[workspace.metadata.dist]
cargo-dist-version = "0.32.0"
ci = "github"
installers = ["shell", "powershell", "homebrew"]
tap = "SaehwanPark/homebrew-tap"
publish-jobs = ["homebrew"]
targets = [
  "aarch64-apple-darwin",
  "x86_64-apple-darwin",
  "x86_64-unknown-linux-gnu",
]

[profile.dist]
inherits = "release"
lto = "thin"
